--- a/src/main/webapp/app/entities/book/detail/book-detail.component.html
+++ b/src/main/webapp/app/entities/book/detail/book-detail.component.html
@@ -48,7 +48,7 @@
       </button>
 
       <button type="button" [routerLink]="['/book', book.id, 'edit']" class="btn btn-primary">
-        <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>تعديل</span>
+        <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>تعــديل</span>
       </button>
     </div>
   </div>
