--- a/src/main/webapp/app/account/activate/activate.component.html
+++ b/src/main/webapp/app/account/activate/activate.component.html
@@ -4,7 +4,7 @@
       <h1>Activation</h1>
 
       <div class="alert alert-success" *ngIf="success">
-        <span><strong>تم تفعيل الحساب نجاح.</strong> Please </span>
+        <span><strong>تم تفعيل الحساب نجاح.</strong> رجاءً! </span>
         <a class="alert-link" routerLink="/login">تسجيل الدخول</a>.
       </div>
 
