--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -1,8 +1,8 @@
 <div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center" style="text-align: right">
     <div class="col-md-8" *ngIf="account$ | async as account">
       <h2>
-        Password for [<strong>{{ account.login }}</strong
+        كلمة المرور لـ <strong>{{ account.login }}</strong
         >]
       </h2>
 
@@ -34,7 +34,7 @@
             "
           >
             <small class="form-text text-danger" *ngIf="passwordForm.get('currentPassword')?.errors?.required">
-              Your password is required.
+              كلمة المرور مطلوبة.
             </small>
           </div>
         </div>
@@ -58,7 +58,7 @@
             "
           >
             <small class="form-text text-danger" *ngIf="passwordForm.get('newPassword')?.errors?.required">
-              Your password is required.
+              كلمة المرور مطلوبة.
             </small>
 
             <small class="form-text text-danger" *ngIf="passwordForm.get('newPassword')?.errors?.minlength">
@@ -92,7 +92,7 @@
             "
           >
             <small class="form-text text-danger" *ngIf="passwordForm.get('confirmPassword')?.errors?.required">
-              Your confirmation password is required.
+              كلمة المرور المؤكدة مطلوبة.
             </small>
 
             <small class="form-text text-danger" *ngIf="passwordForm.get('confirmPassword')?.errors?.minlength">
