--- a/src/main/webapp/app/admin/metrics/metrics.component.html
+++ b/src/main/webapp/app/admin/metrics/metrics.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="text-align: right">
   <h2>
     <span id="metrics-page-heading" data-cy="metricsPageHeading">Application Metrics</span>
 
