--- a/src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.html
+++ b/src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.html
@@ -1,5 +1,5 @@
-<form *ngIf="user" name="deleteForm" (ngSubmit)="confirmDelete(user.login!)">
-  <div class="modal-header">
+<form *ngIf="user" name="deleteForm" (ngSubmit)="confirmDelete(user.login!)" >
+  <div class="modal-header" style="text-align: right">
     <h4 class="modal-title">Confirm delete operation</h4>
 
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
