--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -1,17 +1,17 @@
 <div>
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h1 data-cy="registerTitle">Registration</h1>
+      <h1 data-cy="registerTitle">التسحيل</h1>
 
-      <div class="alert alert-success" *ngIf="success"><strong>Registration saved!</strong> Please check your email for confirmation.</div>
+      <div class="alert alert-success" *ngIf="success"><strong>حفظ التسجيل!</strong> من فضلك يرجي التحقق من بريدك الالكتروني.</div>
 
-      <div class="alert alert-danger" *ngIf="error"><strong>Registration failed!</strong> Please try again later.</div>
+      <div class="alert alert-danger" *ngIf="error"><strong>فشلت عملية التسجيل!</strong> من فضلك حاول مرة اخرى.</div>
 
       <div class="alert alert-danger" *ngIf="errorUserExists">
         <strong>Login name already registered!</strong> Please choose another one.
       </div>
 
-      <div class="alert alert-danger" *ngIf="errorEmailExists"><strong>Email is already in use!</strong> Please choose another one.</div>
+      <div class="alert alert-danger" *ngIf="errorEmailExists"><strong>البريد الالكتروني مستعمل!</strong> من فضلك اختار بريد اخرى!</div>
 
       <div class="alert alert-danger" *ngIf="doNotMatch">The password and its confirmation do not match!</div>
     </div>
@@ -21,7 +21,7 @@
     <div class="col-md-8">
       <form name="form" role="form" (ngSubmit)="register()" [formGroup]="registerForm" *ngIf="!success">
         <div class="form-group">
-          <label class="form-control-label" for="login">Username</label>
+          <label class="form-control-label" for="login">اسم المستخدم</label>
           <input
             type="text"
             class="form-control"
@@ -34,7 +34,7 @@
           />
 
           <div *ngIf="registerForm.get('login')!.invalid && (registerForm.get('login')!.dirty || registerForm.get('login')!.touched)">
-            <small class="form-text text-danger" *ngIf="registerForm.get('login')?.errors?.required"> Your username is required. </small>
+            <small class="form-text text-danger" *ngIf="registerForm.get('login')?.errors?.required"> مطلوب اسم المستخدم. </small>
 
             <small class="form-text text-danger" *ngIf="registerForm.get('login')?.errors?.minlength">
               Your username is required to be at least 1 character.
@@ -51,7 +51,7 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="email">Email</label>
+          <label class="form-control-label" for="email">البريد الالكتورني</label>
           <input
             type="email"
             class="form-control"
@@ -78,7 +78,7 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="password">New password</label>
+          <label class="form-control-label" for="password">كلمة مرور جديدة</label>
           <input
             type="password"
             class="form-control"
@@ -107,7 +107,7 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="confirmPassword">New password confirmation</label>
+          <label class="form-control-label" for="confirmPassword">تاكيد كلمة مرور </label>
           <input
             type="password"
             class="form-control"
@@ -143,7 +143,7 @@
 
       <div class="mt-3 alert alert-warning">
         <span>If you want to </span>
-        <a class="alert-link" routerLink="/login">sign in</a
+        <a class="alert-link" routerLink="/login">تسجيل الدخول</a
         ><span
           >, you can try the default accounts:<br />- Administrator (login="admin" and password="admin") <br />- User (login="user" and
           password="user").</span
