--- a/src/main/webapp/app/admin/user-management/detail/user-management-detail.component.html
+++ b/src/main/webapp/app/admin/user-management/detail/user-management-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center" style="text-align: right">
   <div class="col-8">
     <div *ngIf="user">
       <h2>
