--- a/src/main/webapp/app/admin/user-management/list/user-management.component.html
+++ b/src/main/webapp/app/admin/user-management/list/user-management.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="text-align: right" style="text-align: right">
   <h2>
     <span id="user-management-page-heading" data-cy="userManagementPageHeading">Users</span>
 
