--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center" style="text-align: right">
     <div class="col-lg-6 col-md-8 col-sm-10">
       <h1 data-cy="loginTitle">Sign in</h1>
       <div class="alert alert-danger" *ngIf="authenticationError" data-cy="loginError">
