--- a/src/main/webapp/app/entities/author/update/author-update.component.html
+++ b/src/main/webapp/app/entities/author/update/author-update.component.html
@@ -1,40 +1,40 @@
 <div class="row justify-content-center">
-  <div class="col-8" style="text-align: right">
+  <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-author-heading" data-cy="AuthorCreateUpdateHeading" style="text-align: right">انشاء او تعديل مؤلف</h2>
+      <h2 id="jhi-author-heading" data-cy="AuthorCreateUpdateHeading">Create or edit a Author</h2>
 
       <div>
         <jhi-alert-error></jhi-alert-error>
 
         <div class="form-group" [hidden]="editForm.get('id')!.value == null">
-          <label class="form-control-label" for="field_id">ر.م</label>
+          <label class="form-control-label" for="field_id">ID</label>
           <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_fullname">الاسم</label>
+          <label class="form-control-label" for="field_fullname">Fullname</label>
           <input type="text" class="form-control" name="fullname" id="field_fullname" data-cy="fullname" formControlName="fullname" />
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_phone">رقم الهاتف</label>
+          <label class="form-control-label" for="field_phone">Phone</label>
           <input type="text" class="form-control" name="phone" id="field_phone" data-cy="phone" formControlName="phone" />
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_birthdate">الاقامة</label>
+          <label class="form-control-label" for="field_birthdate">Birthdate</label>
           <input type="text" class="form-control" name="birthdate" id="field_birthdate" data-cy="birthdate" formControlName="birthdate" />
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_email">البريد الالكتروني</label>
+          <label class="form-control-label" for="field_email">Email</label>
           <input type="text" class="form-control" name="email" id="field_email" data-cy="email" formControlName="email" />
         </div>
       </div>
 
       <div>
         <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
-          <fa-icon icon="ban"></fa-icon>&nbsp;<span>الغاء</span>
+          <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
         </button>
 
         <button
@@ -44,7 +44,7 @@
           [disabled]="editForm.invalid || isSaving"
           class="btn btn-primary"
         >
-          <fa-icon icon="save"></fa-icon>&nbsp;<span>حذف</span>
+          <fa-icon icon="save"></fa-icon>&nbsp;<span>Save</span>
         </button>
       </div>
     </form>
