--- a/src/main/webapp/app/entities/book/list/book.component.html
+++ b/src/main/webapp/app/entities/book/list/book.component.html
@@ -35,6 +35,8 @@
           <th scope="col"><span>ID</span></th>
           <th scope="col"><span>Title</span></th>
           <th scope="col"><span>Isbn</span></th>
+          <th scope="col"><span>Description</span></th>
+          <th scope="col"><span>Content</span></th>
           <th scope="col"><span>Bookdate</span></th>
           <th scope="col"><span>Distributor</span></th>
           <th scope="col"><span>Book Image</span></th>
@@ -51,6 +53,8 @@
           </td>
           <td>{{ book.title }}</td>
           <td>{{ book.isbn }}</td>
+          <td>{{ book.description }}</td>
+          <td>{{ book.content }}</td>
           <td>{{ book.bookdate | formatMediumDate }}</td>
           <td>{{ book.distributor }}</td>
           <td>
