--- a/src/main/webapp/app/entities/book/detail/book-detail.component.html
+++ b/src/main/webapp/app/entities/book/detail/book-detail.component.html
@@ -22,6 +22,14 @@
         <dd>
           <span>{{ book.isbn }}</span>
         </dd>
+        <dt><span>Description</span></dt>
+        <dd>
+          <span>{{ book.description }}</span>
+        </dd>
+        <dt><span>Content</span></dt>
+        <dd>
+          <span>{{ book.content }}</span>
+        </dd>
         <dt><span>Bookdate</span></dt>
         <dd>
           <span>{{ book.bookdate | formatMediumDate }}</span>
