--- a/src/main/webapp/app/entities/book/update/book-update.component.html
+++ b/src/main/webapp/app/entities/book/update/book-update.component.html
@@ -25,6 +25,23 @@
         </div>
 
         <div class="form-group">
+          <label class="form-control-label" for="field_description">Description</label>
+          <input
+            type="text"
+            class="form-control"
+            name="description"
+            id="field_description"
+            data-cy="description"
+            formControlName="description"
+          />
+        </div>
+
+        <div class="form-group">
+          <label class="form-control-label" for="field_content">Content</label>
+          <input type="text" class="form-control" name="content" id="field_content" data-cy="content" formControlName="content" />
+        </div>
+
+        <div class="form-group">
           <label class="form-control-label" for="field_bookdate">Bookdate</label>
           <div class="input-group">
             <input
