--- a/src/main/webapp/app/entities/book/detail/book-detail.component.html
+++ b/src/main/webapp/app/entities/book/detail/book-detail.component.html
@@ -30,6 +30,10 @@
         <dd>
           <span>{{ book.content }}</span>
         </dd>
+        <dt><span>Links</span></dt>
+        <dd>
+          <span>{{ book.links }}</span>
+        </dd>
         <dt><span>Bookdate</span></dt>
         <dd>
           <span>{{ book.bookdate | formatMediumDate }}</span>
