--- a/src/main/webapp/app/entities/book/list/book.component.html
+++ b/src/main/webapp/app/entities/book/list/book.component.html
@@ -37,6 +37,7 @@
           <th scope="col"><span>Isbn</span></th>
           <th scope="col"><span>Description</span></th>
           <th scope="col"><span>Content</span></th>
+          <th scope="col"><span>Links</span></th>
           <th scope="col"><span>Bookdate</span></th>
           <th scope="col"><span>Distributor</span></th>
           <th scope="col"><span>Book Image</span></th>
@@ -55,6 +56,7 @@
           <td>{{ book.isbn }}</td>
           <td>{{ book.description }}</td>
           <td>{{ book.content }}</td>
+          <td>{{ book.links }}</td>
           <td>{{ book.bookdate | formatMediumDate }}</td>
           <td>{{ book.distributor }}</td>
           <td>
