--- a/src/main/webapp/app/entities/book/list/book.component.html
+++ b/src/main/webapp/app/entities/book/list/book.component.html
@@ -1,11 +1,11 @@
 <div>
-  <h2 id="page-heading" data-cy="BookHeading">
-    <span>Books</span>
+  <h2 id="page-heading" data-cy="BookHeading" style="text-align: right">
+    <span>الكتب</span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info mr-2" (click)="loadAll()" [disabled]="isLoading">
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span>Refresh List</span>
+        <span>تهيئة الجدول</span>
       </button>
 
       <button
@@ -15,7 +15,7 @@
         [routerLink]="['/book/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span> Create a new Book </span>
+        <span> انشاء جدول جديد </span>
       </button>
     </div>
   </h2>
@@ -25,25 +25,25 @@
   <jhi-alert></jhi-alert>
 
   <div class="alert alert-warning" id="no-result" *ngIf="books?.length === 0">
-    <span>No books found</span>
+    <span>لا يوجد كتب</span>
   </div>
 
-  <div class="table-responsive" id="entities" *ngIf="books && books.length > 0">
+  <div class="table-responsive" id="entities" style="text-align: right" *ngIf="books && books.length > 0">
     <table class="table table-striped" aria-describedby="page-heading">
       <thead>
         <tr>
-          <th scope="col"><span>ID</span></th>
-          <th scope="col"><span>Title</span></th>
-          <th scope="col"><span>Isbn</span></th>
-          <th scope="col"><span>Description</span></th>
-          <th scope="col"><span>Content</span></th>
-          <th scope="col"><span>Links</span></th>
-          <th scope="col"><span>Bookdate</span></th>
-          <th scope="col"><span>Distributor</span></th>
-          <th scope="col"><span>Book Image</span></th>
-          <th scope="col"><span>Book Pdf</span></th>
-          <th scope="col"><span>Producer</span></th>
-          <th scope="col"><span>Author</span></th>
+          <th scope="col"><span>ر.م</span></th>
+          <th scope="col"><span>العنوان</span></th>
+          <th scope="col"><span>رقم الكتاب</span></th>
+          <th scope="col"><span>تفاصيل الكتاب</span></th>
+          <th scope="col"><span>محتويات الكتاب</span></th>
+          <th scope="col"><span>رابط الكتاب</span></th>
+          <th scope="col"><span>تاريخ الكتاب</span></th>
+          <th scope="col"><span>الموزع</span></th>
+          <th scope="col"><span>صورة للكتاب</span></th>
+          <th scope="col"><span>تحميل الكتاب</span></th>
+          <th scope="col"><span>المنتج</span></th>
+          <th scope="col"><span>المؤلف</span></th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -66,7 +66,7 @@
             <span *ngIf="book.bookImage">{{ book.bookImageContentType }}, {{ byteSize(book.bookImage) }}</span>
           </td>
           <td>
-            <a *ngIf="book.bookPdf" (click)="openFile(book.bookPdf, book.bookPdfContentType)">open</a>
+            <a *ngIf="book.bookPdf" (click)="openFile(book.bookPdf, book.bookPdfContentType)">عرض</a>
             <span *ngIf="book.bookPdf">{{ book.bookPdfContentType }}, {{ byteSize(book.bookPdf) }}</span>
           </td>
           <td>{{ book.producer }}</td>
@@ -80,17 +80,17 @@
             <div class="btn-group">
               <button type="submit" [routerLink]="['/book', book.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
                 <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline">View</span>
+                <span class="d-none d-md-inline">عرض</span>
               </button>
 
               <button type="submit" [routerLink]="['/book', book.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">
                 <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline">Edit</span>
+                <span class="d-none d-md-inline">تعديل</span>
               </button>
 
               <button type="submit" (click)="delete(book)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
                 <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline">Delete</span>
+                <span class="d-none d-md-inline">حذف</span>
               </button>
             </div>
           </td>
