--- a/src/main/webapp/app/entities/book/delete/book-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/book/delete/book-delete-dialog.component.html
@@ -1,6 +1,6 @@
-<form *ngIf="book" name="deleteForm" (ngSubmit)="confirmDelete(book.id!)">
+<form *ngIf="book" name="deleteForm" (ngSubmit)="confirmDelete(book.id!)" style="text-align: right">
   <div class="modal-header">
-    <h4 class="modal-title" data-cy="bookDeleteDialogHeading">Confirm delete operation</h4>
+    <h4 class="modal-title" data-cy="bookDeleteDialogHeading">هل انت متاكد</h4>
 
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
   </div>
@@ -8,7 +8,7 @@
   <div class="modal-body">
     <jhi-alert-error></jhi-alert-error>
 
-    <p id="jhi-delete-book-heading">Are you sure you want to delete this Book?</p>
+    <p id="jhi-delete-book-heading">هل انت متاكد من الحذف؟?</p>
   </div>
 
   <div class="modal-footer">
