--- a/src/main/webapp/app/entities/book/delete/book-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/book/delete/book-delete-dialog.component.html
@@ -8,16 +8,16 @@
   <div class="modal-body">
     <jhi-alert-error></jhi-alert-error>
 
-    <p id="jhi-delete-book-heading">هل انت متاكد من الحذف؟?</p>
+    <p id="jhi-delete-book-heading">هل انت متاكد من الحـذف؟</p>
   </div>
 
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cancel()">
-      <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
+      <fa-icon icon="ban"></fa-icon>&nbsp;<span>الغاء</span>
     </button>
 
     <button id="jhi-confirm-delete-book" data-cy="entityConfirmDeleteButton" type="submit" class="btn btn-danger">
-      <fa-icon icon="times"></fa-icon>&nbsp;<span>Delete</span>
+      <fa-icon icon="times"></fa-icon>&nbsp;<span>حذف</span>
     </button>
   </div>
 </form>
