--- a/src/main/webapp/app/entities/book/detail/book-detail.component.html
+++ b/src/main/webapp/app/entities/book/detail/book-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-8" style="text-align: right">
     <div *ngIf="book">
-      <h2 data-cy="bookDetailsHeading"><span>Book</span></h2>
+      <h2 data-cy="bookDetailsHeading"><span>الكتب</span></h2>
 
       <hr />
 
@@ -10,11 +10,11 @@
       <jhi-alert></jhi-alert>
 
       <dl class="row-md jh-entity-details">
-        <dt><span>ID</span></dt>
+        <dt><span>ر.م</span></dt>
         <dd>
           <span>{{ book.id }}</span>
         </dd>
-        <dt><span>Title</span></dt>
+        <dt><span>العنوان</span></dt>
         <dd>
           <span>{{ book.title }}</span>
         </dd>
@@ -22,27 +22,27 @@
         <dd>
           <span>{{ book.isbn }}</span>
         </dd>
-        <dt><span>Description</span></dt>
+        <dt><span>الوصف</span></dt>
         <dd>
           <span>{{ book.description }}</span>
         </dd>
-        <dt><span>Content</span></dt>
+        <dt><span>محتوي الكتاب</span></dt>
         <dd>
           <span>{{ book.content }}</span>
         </dd>
-        <dt><span>Links</span></dt>
+        <dt><span>روابط الكتاب</span></dt>
         <dd>
           <span>{{ book.links }}</span>
         </dd>
-        <dt><span>Bookdate</span></dt>
+        <dt><span>تاريخ الاصدار</span></dt>
         <dd>
           <span>{{ book.bookdate | formatMediumDate }}</span>
         </dd>
-        <dt><span>Distributor</span></dt>
+        <dt><span>الموزع</span></dt>
         <dd>
           <span>{{ book.distributor }}</span>
         </dd>
-        <dt><span>Book Image</span></dt>
+        <dt><span>صورة للكتاب </span></dt>
         <dd>
           <div *ngIf="book.bookImage">
             <a (click)="openFile(book.bookImage, book.bookImageContentType)">
@@ -51,32 +51,32 @@
             {{ book.bookImageContentType }}, {{ byteSize(book.bookImage) }}
           </div>
         </dd>
-        <dt><span>Book Pdf</span></dt>
+        <dt><span> تحميل الكتاب</span></dt>
         <dd>
           <div *ngIf="book.bookPdf">
             <a (click)="openFile(book.bookPdf, book.bookPdfContentType)">open</a>
             {{ book.bookPdfContentType }}, {{ byteSize(book.bookPdf) }}
           </div>
         </dd>
-        <dt><span>Producer</span></dt>
+        <dt><span>المنتجون</span></dt>
         <dd>
           <span>{{ book.producer }}</span>
         </dd>
-        <dt><span>Author</span></dt>
+        <dt><span>المؤلفون</span></dt>
         <dd>
           <span *ngFor="let author of book.authors; let last = last">
-            <a [routerLink]="['/author', author?.id, 'view']">{{ author.id }}</a
+            <a [routerLink]="['/author', author?.id, 'view']">{{ author.fullname }}</a
             >{{ last ? '' : ', ' }}
           </span>
         </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
-        <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>Back</span>
+        <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>الخلف</span>
       </button>
 
       <button type="button" [routerLink]="['/book', book.id, 'edit']" class="btn btn-primary">
-        <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>Edit</span>
+        <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>تعديل</span>
       </button>
     </div>
   </div>
