--- a/src/main/webapp/app/entities/book/update/book-update.component.html
+++ b/src/main/webapp/app/entities/book/update/book-update.component.html
@@ -1,21 +1,21 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center" style="text-align: right">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-book-heading" data-cy="BookCreateUpdateHeading">Create or edit a Book</h2>
+      <h2 id="jhi-book-heading" data-cy="BookCreateUpdateHeading">تعديل او انشاء كتاب جديد</h2>
 
       <div>
         <jhi-alert-error></jhi-alert-error>
 
         <div class="form-group" [hidden]="editForm.get('id')!.value == null">
-          <label class="form-control-label" for="field_id">ID</label>
+          <label class="form-control-label" for="field_id">ر.م</label>
           <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_title">Title</label>
+          <label class="form-control-label" for="field_title">العنوان</label>
           <input type="text" class="form-control" name="title" id="field_title" data-cy="title" formControlName="title" />
           <div *ngIf="editForm.get('title')!.invalid && (editForm.get('title')!.dirty || editForm.get('title')!.touched)">
-            <small class="form-text text-danger" *ngIf="editForm.get('title')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" *ngIf="editForm.get('title')?.errors?.required"> يجب تعبئة البيانات. </small>
           </div>
         </div>
 
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_description">Description</label>
+          <label class="form-control-label" for="field_description">وصف الكتاب</label>
           <input
             type="text"
             class="form-control"
@@ -37,17 +37,17 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_content">Content</label>
+          <label class="form-control-label" for="field_content">المحتوي</label>
           <input type="text" class="form-control" name="content" id="field_content" data-cy="content" formControlName="content" />
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_links">Links</label>
+          <label class="form-control-label" for="field_links">رابط الكتاب</label>
           <input type="text" class="form-control" name="links" id="field_links" data-cy="links" formControlName="links" />
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_bookdate">Bookdate</label>
+          <label class="form-control-label" for="field_bookdate">تاريخ الكتاب</label>
           <div class="input-group">
             <input
               id="field_bookdate"
@@ -64,12 +64,12 @@
             </span>
           </div>
           <div *ngIf="editForm.get('bookdate')!.invalid && (editForm.get('bookdate')!.dirty || editForm.get('bookdate')!.touched)">
-            <small class="form-text text-danger" *ngIf="editForm.get('bookdate')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" *ngIf="editForm.get('bookdate')?.errors?.required"> يجب تعبئة البيانات. </small>
           </div>
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_distributor">Distributor</label>
+          <label class="form-control-label" for="field_distributor">الموزعين</label>
           <input
             type="text"
             class="form-control"
@@ -79,12 +79,12 @@
             formControlName="distributor"
           />
           <div *ngIf="editForm.get('distributor')!.invalid && (editForm.get('distributor')!.dirty || editForm.get('distributor')!.touched)">
-            <small class="form-text text-danger" *ngIf="editForm.get('distributor')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" *ngIf="editForm.get('distributor')?.errors?.required">  يجب تعبئة البيانات. </small>
           </div>
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_bookImage">Book Image</label>
+          <label class="form-control-label" for="field_bookImage">صورة الكتاب</label>
           <div>
             <img
               [src]="'data:' + editForm.get('bookImageContentType')!.value + ';base64,' + editForm.get('bookImage')!.value"
@@ -144,15 +144,15 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="field_producer">Producer</label>
+          <label class="form-control-label" for="field_producer">المنتجون</label>
           <input type="text" class="form-control" name="producer" id="field_producer" data-cy="producer" formControlName="producer" />
           <div *ngIf="editForm.get('producer')!.invalid && (editForm.get('producer')!.dirty || editForm.get('producer')!.touched)">
-            <small class="form-text text-danger" *ngIf="editForm.get('producer')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" *ngIf="editForm.get('producer')?.errors?.required">  يجب تعبئة البيانات. </small>
           </div>
         </div>
 
         <div class="form-group">
-          <label for="field_authors">Author</label>
+          <label for="field_authors">المؤلف</label>
           <select class="form-control" id="field_authors" data-cy="author" multiple name="authors" formControlName="authors">
             <option
               [ngValue]="getSelectedAuthor(authorOption, editForm.get('authors')!.value)"
@@ -166,7 +166,7 @@
 
       <div>
         <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
-          <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
+          <fa-icon icon="ban"></fa-icon>&nbsp;<span>الغاء</span>
         </button>
 
         <button
@@ -176,7 +176,7 @@
           [disabled]="editForm.invalid || isSaving"
           class="btn btn-primary"
         >
-          <fa-icon icon="save"></fa-icon>&nbsp;<span>Save</span>
+          <fa-icon icon="save"></fa-icon>&nbsp;<span>حفظ</span>
         </button>
       </div>
     </form>
