--- a/src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.html
+++ b/src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="user" name="deleteForm" (ngSubmit)="confirmDelete(user.login!)" >
   <div class="modal-header" style="text-align: right">
-    <h4 class="modal-title">Confirm delete operation</h4>
+    <h4 class="modal-title">عملية الحذف</h4>
 
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
   </div>
@@ -8,12 +8,12 @@
   <div class="modal-body">
     <jhi-alert-error></jhi-alert-error>
 
-    <p>Are you sure you want to delete this User?</p>
+    <p>هل متاكد من حذف المستخدم؟</p>
   </div>
 
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cancel()">
-      <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
+      <fa-icon icon="ban"></fa-icon>&nbsp;<span>الغاء</span>
     </button>
 
     <button type="submit" class="btn btn-danger"><fa-icon icon="times"></fa-icon>&nbsp;<span>Delete</span></button>
