--- a/src/main/webapp/app/entities/author/detail/author-detail.component.html
+++ b/src/main/webapp/app/entities/author/detail/author-detail.component.html
@@ -1,7 +1,7 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center" style="text-align: right">
   <div class="col-8">
     <div *ngIf="author">
-      <h2 data-cy="authorDetailsHeading"><span>Author</span></h2>
+      <h2 data-cy="authorDetailsHeading"><span>المؤلفين</span></h2>
 
       <hr />
 
@@ -10,11 +10,11 @@
       <jhi-alert></jhi-alert>
 
       <dl class="row-md jh-entity-details">
-        <dt><span>ID</span></dt>
+        <dt><span>ر.م</span></dt>
         <dd>
           <span>{{ author.id }}</span>
         </dd>
-        <dt><span>Fullname</span></dt>
+        <dt><span>اسم المؤلف</span></dt>
         <dd>
           <span>{{ author.fullname }}</span>
         </dd>
@@ -22,22 +22,22 @@
         <dd>
           <span>{{ author.phone }}</span>
         </dd>
-        <dt><span>Birthdate</span></dt>
+        <dt><span>تاريخ الميلاد</span></dt>
         <dd>
           <span>{{ author.birthdate }}</span>
         </dd>
-        <dt><span>Email</span></dt>
+        <dt><span>البريد الالكتروني</span></dt>
         <dd>
           <span>{{ author.email }}</span>
         </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
-        <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>Back</span>
+        <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>للخلف</span>
       </button>
 
       <button type="button" [routerLink]="['/author', author.id, 'edit']" class="btn btn-primary">
-        <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>Edit</span>
+        <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>تعديل</span>
       </button>
     </div>
   </div>
