--- a/src/main/webapp/app/entities/author/list/author.component.html
+++ b/src/main/webapp/app/entities/author/list/author.component.html
@@ -1,11 +1,11 @@
-<div>
+<div style="text-align: right">
   <h2 id="page-heading" data-cy="AuthorHeading">
-    <span>Authors</span>
+    <span>المؤلفين</span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info mr-2" (click)="loadAll()" [disabled]="isLoading">
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span>Refresh List</span>
+        <span>تهيئة الجدول</span>
       </button>
 
       <button
@@ -15,7 +15,7 @@
         [routerLink]="['/author/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span> Create a new Author </span>
+        <span>  مؤلف جديد </span>
       </button>
     </div>
   </h2>
@@ -25,18 +25,18 @@
   <jhi-alert></jhi-alert>
 
   <div class="alert alert-warning" id="no-result" *ngIf="authors?.length === 0">
-    <span>No authors found</span>
+    <span>مؤلف غير موجود</span>
   </div>
 
   <div class="table-responsive" id="entities" *ngIf="authors && authors.length > 0">
     <table class="table table-striped" aria-describedby="page-heading">
       <thead>
         <tr>
-          <th scope="col"><span>ID</span></th>
-          <th scope="col"><span>Fullname</span></th>
-          <th scope="col"><span>Phone</span></th>
-          <th scope="col"><span>Birthdate</span></th>
-          <th scope="col"><span>Email</span></th>
+          <th scope="col"><span>ر.م</span></th>
+          <th scope="col"><span>اسم المؤلف</span></th>
+          <th scope="col"><span>رقم الهاتف</span></th>
+          <th scope="col"><span>عنوانه</span></th>
+          <th scope="col"><span>البريد الالكتروني</span></th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -53,17 +53,17 @@
             <div class="btn-group">
               <button type="submit" [routerLink]="['/author', author.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
                 <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline">View</span>
+                <span class="d-none d-md-inline">عرض</span>
               </button>
 
               <button type="submit" [routerLink]="['/author', author.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">
                 <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline">Edit</span>
+                <span class="d-none d-md-inline">تعديل</span>
               </button>
 
               <button type="submit" (click)="delete(author)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
                 <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline">Delete</span>
+                <span class="d-none d-md-inline">حذف</span>
               </button>
             </div>
           </td>
